# primitive

./: .gitignore  AGENTS.md  Cargo.toml  Makefile  README.md  run_example.py  rust-toolchain.toml
.agent/: EVIDENCE.md  PROGRESS.md
.cursor/: scratchpad.md
.cursor/rules/: general-dev-best-practices.mdc
.github/workflows/: ci.yml
.specstory/history/: converting-go-codebase-to-python.md
assets/: Info.plist
assets/icons/: primitive.icns
crates/primitive-app/: Cargo.toml
crates/primitive-app/examples/: reconstruct.rs
crates/primitive-app/src/: app.rs  device.rs  hero.rs  i18n.rs  image_io.rs  lib.rs  main.rs  runner.rs  sidebar.rs  state.rs  theme.rs
crates/primitive-app/tests/: a11y_tokens.rs  a11y_tree.rs  e2e.rs  forced_cpu.rs  state_suite.rs
crates/primitive-compute/: Cargo.toml
crates/primitive-compute/src/: lib.rs
crates/primitive-core/: Cargo.toml
crates/primitive-core/examples/: experiment.rs
crates/primitive-core/src/: canvas.rs  color.rs  draw.rs  energy_map.rs  es.rs  eval.rs  lib.rs  model.rs  optimizer.rs  philox.rs  raster.rs  raster_int.rs  rng.rs  score.rs  shape.rs
crates/primitive-core/tests/: golden.rs  parity.rs  shapes.rs
crates/primitive-core/tests/common/: mod.rs
crates/primitive-core/tests/fixtures/: parity_fogleman.json
crates/primitive-engine/: Cargo.toml
crates/primitive-engine/src/: lib.rs
crates/primitive-engine/tests/: cpu_baseline.rs
crates/primitive-gpu-cpu/: Cargo.toml
crates/primitive-gpu-cpu/src/: lib.rs
crates/primitive-gpu-cubecl/: Cargo.toml
crates/primitive-gpu-cubecl/examples/: sweep.rs
crates/primitive-gpu-cubecl/src/: kernels.rs  lib.rs  score_shapes.rs  search.rs  search_shapes.rs
crates/primitive-gpu-cubecl/tests/: gpu2_ellipses.rs  gpu2_rects.rs  gpu2_throughput.rs  gpu2_triangles.rs  gpu3_ellipse_optimize.rs  gpu3_optimize.rs  gpu3_philox.rs  gpu3_rect_optimize.rs  gpu_parity.rs
crates/primitive-gpu-cubecl/tests/common/: mod.rs
docs/gpu4-cuda/: RUNBOOK.md
docs/pkg/: RUNBOOK.md
docs/plan/: primitive-2026-architecture.md  primitive-2026-implementation-goal.md
docs/research/: primitive-2026-research-findings.md
go_primitive/: go.mod
go_primitive/primitive/: bench_test.go  parity_dump_test.go
py_primitive/: README.md  __init__.py  install.sh  pyproject.toml  setup.py
py_primitive/config/: __init__.py  config.py
py_primitive/primitive/: __init__.py  model.py  optimizer.py
py_primitive/py_primitive/: __init__.py  main.py
py_primitive/py_primitive.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
py_primitive/py_primitive/config/: __init__.py  config.py
py_primitive/py_primitive/examples/: README.md  __init__.py  simple_example.py
py_primitive/py_primitive/primitive/: __init__.py  accelerator.py  gpu.py  model.py  optimizer.py  shapes.py
py_primitive/tests/: __init__.py  test_import.py
scripts/ops/: gen-icon.py  regen-fogleman-ref.sh  sign-notarize.sh
tools/verify/: check-boundaries.sh  check.sh
