[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "py_primitive"
version = "0.1.0"
description = "GPU-accelerated image approximation with geometric primitives"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "Primitive Team", email = "example@example.com"}
]
dependencies = [
    "torch>=1.12.0",
    "numpy>=1.20.0",
    "pillow>=8.0.0",
]

[project.scripts]
py_primitive = "py_primitive.main:main"

[tool.setuptools]
packages = ["py_primitive"] 